--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+$simple-line-font-path: '~simple-line-icons/fonts/';
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import "./theme/variables";
+
+@import "~bootstrap/scss/bootstrap.scss";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/regular.scss";
+@import "~@fortawesome/fontawesome-free/scss/solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/brands.scss";
+@import "~simple-line-icons/scss/simple-line-icons.scss";
+@import "./theme/fcovid.scss";
