--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<app-footer></app-footer>
+<layout-header></layout-header>
+
+<router-outlet></router-outlet>
+
+<layout-footer></layout-footer>
