--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -1,7 +1,194 @@
-<app-landing-navigation></app-landing-navigation>
-<app-landing-masthead></app-landing-masthead>
-<app-landing-ways-to-help></app-landing-ways-to-help>
-<app-landing-how-we-work></app-landing-how-we-work>
-<app-landing-active-challenges></app-landing-active-challenges>
+<!-- Masthead -->
+<header class="text-dark text-lg-right text-center">
+    <div class="container">
+        <div class="row masthead">
+            <div class="col-lg-6 offset-lg-6 col-sm-8 offset-sm-2">
+                <span class="mini-logo">by <img src="../../../../../assets/img/hf-logo.png" alt="hf-logo"> &
+                    <img src="../../../../../assets/img/hack-fund-logo.png" alt="hack-fund-logo"></span>
+                <p class="align-right">Kackers and Founders fixing COVID-19</p>
+            </div>
+        </div>
+    </div>
+</header>
+
+<section class="description bg-dark">
+    <div class="container bg-dark text-center text-white p-5">
+        <p class="lead mb-0">
+            COVID-19 is a once-in-a-century pandemic, likely to infect millions. Our healthcare heroes are working long
+            hours in difficult conditions to save lives. And they need the help of brilliant hackers and entrepreneurs
+            who could bring innovation to an often antiquated system. Following are open challenges. Let’s do our part
+            to fix COVID.
+        </p>
+        <div class="button-section d-flex justify-content-around mt-5">
+            <a class="btn btn-lg btn-light v-center" href="#">Feed the Heroes</a>
+            <a class="btn btn-lg btn-light" href="#">Healthcare System Data</a>
+            <a class="btn btn-lg btn-light v-center" href="#">CoVent-19</a>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+    </div>
+</section>
+
+<!-- Icons Grid -->
+<section class="features-icons text-center">
+    <div class="container">
+        <h4 class="mb-3 mt-5 px-5 text-danger font-weight-bold font-italic">
+            If there’s anything that a Hacker and a Founder knows how to do is figure out how to do the impossible with
+            scarce resources.
+        </h4>
+        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold">This are the different ways you can
+            help</h5>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                <div
+                    class="bg-light d-flex features-icons-item flex-column h-100 mb-5 mb-lg-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <!-- <div class="features-icons-icon d-flex">
+                        <i class="icon-screen-desktop m-auto text-primary"></i>
+                    </div> -->
+                    <!-- <h3>Know More</h3> -->
+                    <p class="lead mb-0 flex-fill">
+                        An anonymous place to share frustrations about what isn’t working on the front lines.
+                        If you would like to speak directly to the people building solutions, please complete the
+                        optional contact information.
+                    </p>
+                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                <div
+                    class="bg-light d-flex features-icons-item flex-column h-100 mb-5 mb-lg-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <!-- <div class="features-icons-icon d-flex">
+                        <i class="icon-layers m-auto text-primary"></i>
+                    </div> -->
+                    <!-- <h3>Participate</h3> -->
+                    <p class="lead mb-0 flex-fill">
+                        ParticipateWe welcome developers, designers, business development professionals, project
+                        managers and more to participate.
+                        If possible, we will connect single founders with a team.
+                    </p>
+                    <a class="btn btn-primary" href="#">Participate</a>
+                </div>
+            </div>
+            <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <div
+                    class="bg-light d-flex features-icons-item flex-column h-100 mb-5 mb-lg-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <div class="features-icons-icon d-flex">
+                        <i class="icon-check m-auto text-primary"></i>
+                    </div>
+                    <h3>Give Information</h3>
+                    <p class="lead mb-0 flex-fill">
+                        Seeking experts to provide context and guidance for Innovation Challenges. <br>
+                        Areas of interest include healthcare administration; hardware and software; medical equipment;
+                        legal; governmental, economic and environmental policy; and more.
+                    </p>
+                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                </div>
+            </div> -->
+            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                <div
+                    class="bg-light d-flex features-icons-item flex-column h-100 mb-0 mb-lg-3 mx-auto px-4 py-3 rounded">
+                    <!-- <div class="features-icons-icon d-flex">
+                        <i class="icon-check m-auto text-primary"></i>
+                    </div> -->
+                    <!-- <h3>Donate</h3> -->
+                    <p class="lead mb-0 flex-fill">
+                        Seeking experts to provide context and guidance for Innovation Challenges. <br>
+                        Areas of interest include healthcare administration; hardware and software; medical equipment;
+                        legal; governmental, economic and environmental policy; and more.
+                    </p>
+                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-dark py-5 text-light">
+    <div class="container p-0">
+        <h5 class="mb-3 section-title text-center font-weight-bold">How does FCOVID works</h5>
+        <div class="row no-gutters">
+            <div class="col-lg-6 text-right">
+                <img class="w-100" src="../../../assets/img/how-does-work.png" alt="how-does-work">
+            </div>
+            <div class="col-lg-6 my-auto pt-5 pt-lg-0 px-3 showcase-text">
+                <!-- <h2>Updated For Bootstrap 4</h2> -->
+                <p class="lead mb-0">
+                    F/COVID is the non-profit arm of Hackers/Founders and HACK Fund, established to deliver
+                    technological solutions for the COVID-19 crisis. Our Innovation Challenges are constructed to
+                    address healthcare professionals’ urgent needs as they serve on the front lines.
+                </p> <br>
+                <p class="lead mb-0">
+                    Our Process <br>
+                    -Network with government, healthcare and manufacturing leaders <br>
+                    -Source and select nonprofit startup teams from around the globe <br>
+                    -F/COVID provides on-demand funding for validated hardware and software solutions <br>
+                    -The F/COVID team is available for support
+                </p>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="showcase">
+    <div class="container p-0">
+        <h4 class="mb-3 mt-5 px-5 text-center text-danger font-weight-bold font-italic">
+            We build. We measure. We improve. We improvise. We overcome.
+        </h4>
+
+        <h5 class="mb-3 mt-5 section-title text-center text-dark font-weight-bold">Active Challenges</h5>
+
+        <div class="row no-gutters">
+            <div class="col-lg-6 order-lg-2 text-white showcase-img">
+                <img class="w-100" src="../../../assets/img/feed-a-hero.png" alt="feed-a-hero">
+            </div>
+            <div class="col-lg-6 order-lg-1 px-3 showcase-text d-flex flex-column">
+                <h2>Feed the Heroes</h2>
+                <p class="lead mb-0 flex-fill">
+                    Build a website that enables individuals, organizations and companies to purchase a meal for a
+                    medical facility or department.
+                </p>
+                <a class="btn btn-lg btn-primary mt-3 text-light" href="#">Learn more
+                    <span class="fa fa-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-lg-6 text-white showcase-img">
+                <img class="w-100" src="../../../assets/img/healthcare-system-data.png" alt="healthcare-system-data">
+            </div>
+            <div class="col-lg-6 px-3 showcase-text d-flex flex-column">
+                <h2>Healthcare System Data</h2>
+                <p class="lead mb-0 flex-fill">
+                    Platform 1: track facility data (hospital beds, ventilators, etc.), to power the other innovation
+                    challenges. <br>
+                    Platform 2: track infection, hospital capacity and capability. <br>
+                    Platform 3: epidemiological contact tracing.
+                </p>
+                <a class="btn btn-lg btn-primary mt-3 text-light" href="#">Learn more
+                    <span class="fa fa-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-lg-6 order-lg-2 text-white showcase-img d-flex"
+                style="background-image: url('../../../assets/img/covent-19.png');">
+                <img class="m-auto" src="../../../assets/img/covent-19-logo.png" alt="covent-19.png">
+            </div>
+            <div class="col-lg-6 order-lg-1 px-3 showcase-text d-flex flex-column">
+                <h2>CoVent-19 Challenge</h2>
+                <p class="lead mb-0 flex-fill">
+                    An Open Innovation Effort to Design a Rapidly Deployable Mechanical Ventilator
+                </p>
+                <a class="btn btn-lg btn-primary mt-3 text-light" href="#">Learn more
+                    <span class="fa fa-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<layout-sponsor-section></layout-sponsor-section>
 <!-- <app-landing-team></app-landing-team> -->
-<app-landing-footer></app-landing-footer>
