--- a/src/theme/_global.scss
+++ b/src/theme/_global.scss
@@ -17,5 +17,14 @@ h6 {
 }
 
 .lead {
+    font-size: 1rem;
     font-weight: 500;
+}
+
+.logo {
+    height: 52px;
+}
+
+.font-weight-bold {
+    font-weight: 600 !important;
 }
