--- a/src/theme/_showcase.scss
+++ b/src/theme/_showcase.scss
@@ -1,14 +1,14 @@
 .showcase {
   .showcase-text {
-    padding: 3rem;
+    padding: 1rem 3rem 3rem 3rem;
   }
   .showcase-img {
     min-height: 30rem;
     background-size: cover;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 991px) {
     .showcase-text {
-      padding: 7rem;
+      padding: 3rem 7rem 7rem 7rem;
     }
   }
 }
