Add module and componet challenge

--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -150,7 +150,7 @@
                     Build a website that enables individuals, organizations and companies to purchase a meal for a
                     medical facility or department.
                 </p>
-                <a class="btn btn-lg btn-primary mt-3 text-light" href="#">Learn more
+                <a class="btn btn-lg btn-primary mt-3 text-light" [routerLink]="['/challenge']">Learn more
                     <span class="fa fa-chevron-right"></span>
                 </a>
             </div>
