--- a/src/app/modules/layout/components/footer/footer.component.html
+++ b/src/app/modules/layout/components/footer/footer.component.html
@@ -11,22 +11,22 @@
             <div class="col-lg-4 h-100 text-center text-lg-right my-auto">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item mr-3">
-                        <a href="#">
+                        <a target="_blank" href="https://www.facebook.com/thehackfund/">
                             <i class="fab fa-facebook-f fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a target="_blank" href="https://www.instagram.com/hackersfounders/">
                             <i class="fab fa-instagram fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a target="_blank" href="https://www.linkedin.com/company/18322572/admin/">
                             <i class="fab fa-linkedin-in fa-2x fa-fw"></i>
                         </a>
                     </li>
                     <li class="list-inline-item mr-3">
-                        <a href="#">
+                        <a target="_blank" href="https://twitter.com/thehackfund">
                             <i class="fab fa-twitter fa-2x fa-fw"></i>
                         </a>
                     </li>
