--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,10 +1,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" [routerLink]="['/']">
             <img class="logo" src="../../../../../assets/img/logo-white.png" alt="F/CODIV">
         </a>
         <div class="m-0 p-0">
+            <a class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/home']" fragment="general-description"> F/COVID </a>
             <span class="d-none d-md-inline-block text-light"> Challenges </span>
             <a class="btn btn-light d-none d-md-inline-block mx-3" href="#">I want to participate</a>
             <a class="btn btn-light" href="#">Donate</a>
