habilitando animacion en scroll

--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -20,11 +20,14 @@
             to fix COVID.
         </p>
         <div class="button-section d-flex justify-content-around mt-5">
-            <a class="btn btn-lg btn-light v-center" [routerLink]="['/home']" fragment="challenge-feed-a-hero">Feed the
+            <a pageScroll class="btn btn-lg btn-light v-center" [routerLink]="['/home']"
+                fragment="challenge-feed-a-hero">Feed the
                 Heroes</a>
-            <a class="btn btn-lg btn-light" [routerLink]="['/home']" fragment="challenge-healthcare-system-data">Healthcare
+            <a pageScroll class="btn btn-lg btn-light" [routerLink]="['/home']"
+                fragment="challenge-healthcare-system-data">Healthcare
                 System Data</a>
-            <a class="btn btn-lg btn-light v-center" [routerLink]="['/home']" fragment="challenge-covent-19">CoVent-19</a>
+            <a pageScroll class="btn btn-lg btn-light v-center" [routerLink]="['/home']"
+                fragment="challenge-covent-19">CoVent-19</a>
         </div>
     </div>
 </section>
