Add contact modal

--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -14,7 +14,7 @@
                   <a [routerLink]="['/challenge']" > CoVent-19 </a>
                 </div>
               </div>
-            <a class="btn btn-light d-none d-md-inline-block mx-3" href="#">I want to participate</a>
+            <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="click()">I want to participate</a>
             <a class="btn btn-light" href="#">Donate</a>
         </div>
     </div>
