--- a/src/app/modules/layout/components/header/header.component.scss
+++ b/src/app/modules/layout/components/header/header.component.scss
@@ -33,3 +33,14 @@
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color:rgba(230, 114, 112, 1.0);}
+
+modal-container {
+    .modal-dialog {
+        .modal-content {
+            background-color: rgba(239,239,239,1.0) !important;
+            .modal-body {
+                padding: 2em !important;
+            }
+        }
+    }
+}
