--- a/src/theme/fcovid.scss
+++ b/src/theme/fcovid.scss
@@ -10,3 +10,14 @@
 @import "testimonials.scss";
 @import "call-to-action.scss";
 @import "footer.scss";
+
+modal-container {
+    .modal-dialog {
+        .modal-content {
+            background-color: rgba(239,239,239,1.0) !important;
+            .modal-body {
+                padding: 2em !important;
+            }
+        }
+    }
+}
