--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -10,9 +10,9 @@
             <div class="dropdown">
                 <button class="dropbtn">Challenges</button>
                 <div class="dropdown-content">
-                    <a [routerLink]="['/challenge']"> Feed the heroes </a>
-                    <a [routerLink]="['/challenge']"> Healthcare System Data </a>
-                    <a [routerLink]="['/challenge']"> CoVent-19 </a>
+                    <a [routerLink]="['/challenge/feed-the-heroes']"> Feed the heroes </a>
+                    <a [routerLink]="['/challenge/healthcare-system-data']"> Healthcare System Data </a>
+                    <a href="https://www.coventchallenge.com/" target="_blank"> CoVent-19 </a>
                 </div>
               </div>
             <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="click()">I want to participate</a>
