--- a/src/app/modules/landing/landing.component.scss
+++ b/src/app/modules/landing/landing.component.scss
@@ -22,19 +22,25 @@
             font-size: 1.3rem;
             font-weight: 600;
             margin-top: 15px;
-        }  
+        }
     }
 
     .button-section {
         .btn {
             line-height: 1.25rem;
             font-size: 1.1rem;
-            padding-bottom: 0.3rem;
-            padding-top: 0.3rem;
+            padding-bottom: 0.9rem;
+            padding-top: 0.9rem;
             width: 240px;
 
+            @media (max-width: 991px) {
+                width: 100%;
+            }
+
             &.v-center {
-                padding-top: 0.9rem;
+                @media (min-width: 991px) {
+                    padding-top: 0.9rem;
+                }
             }
         }
     }
