--- a/src/app/modules/challenge/challenge.component.html
+++ b/src/app/modules/challenge/challenge.component.html
@@ -11,7 +11,7 @@
                 </span>
             </div>
             <div class="col-lg-4 col-md-4">
-                <a class="btn btn-lg btn-light v-center" href="#">Contact Challenge Leader</a>
+                <button class="btn btn-lg btn-light v-center" (click)="showModal()">Contact Challenge Leader</button>
             </div>
             <div class="col-lg-3 col-md-3">
                 <a class="btn btn-lg btn-light v-center" href="#">Donate</a>
@@ -19,7 +19,7 @@
         </div>
     </div>
 </section>
-<section class="description" *ngIf="(challenge | async).long_description.length > 0">
+<section class="description-challenge" *ngIf="(challenge | async).long_description.length > 0">
     <div class="container" [innerHTML]="(challenge | async).long_description">
     </div>
 
@@ -58,7 +58,7 @@
                         If you would like to speak directly to the people building solutions, please complete the
                         optional contact information.
                     </p>
-                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-3 mb-lg-0">
@@ -69,7 +69,7 @@
                         managers and more to participate.
                         If possible, we will connect single founders with a team.
                     </p>
-                    <a class="btn btn-primary" href="#">Participate</a>
+                    <button class="btn btn-primary" (click)="showModal()">Participate</button>
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                         Areas of interest include healthcare administration; hardware and software; medical equipment;
                         legal; governmental, economic and environmental policy; and more.
                     </p>
-                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-3 mb-lg-0">
