--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -54,7 +54,7 @@
                         If you would like to speak directly to the people building solutions, please complete the
                         optional contact information.
                     </p>
-                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
@@ -69,7 +69,7 @@
                         managers and more to participate.
                         If possible, we will connect single founders with a team.
                     </p>
-                    <a class="btn btn-primary" href="#">Participate</a>
+                    <button class="btn btn-primary" (click)="showModal()">Participate</button>
                 </div>
             </div>
             <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
@@ -99,7 +99,7 @@
                         Areas of interest include healthcare administration; hardware and software; medical equipment;
                         legal; governmental, economic and environmental policy; and more.
                     </p>
-                    <a class="btn btn-primary" href="#">Contact FCOVID team</a>
+                    <button class="btn btn-primary" (click)="showModal()">Contact FCOVID team</button>
                 </div>
             </div>
         </div>
