--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -15,7 +15,7 @@
                     <a href="https://www.coventchallenge.com/" target="_blank"> CoVent-19 </a>
                 </div>
               </div>
-            <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="click()">I want to participate</a>
+            <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="showModal()">I want to participate</a>
             <a class="btn btn-light" href="#">Donate</a>
         </div>
     </div>
