--- a/src/app/modules/challenge/challenge.component.scss
+++ b/src/app/modules/challenge/challenge.component.scss
@@ -18,11 +18,12 @@
             font-size: 21px;
         }
     }
-    .description {
+    .description-challenge {
         background-color: rgba(239, 239, 239, 1);
         top: 0;
         height: 278px;
         padding: 3rem;
+        text-align: center;
         h3 {
             line-height: 19px;
             font-family: "Montserrat", Helvetica, Arial, serif;
